# rdl-mcp

./: .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  demo_rdl_server.py  pyproject.toml  rdl_mcp_server.py  server.json  setup.py  test_rdl_server.py
.github/workflows/: publish-mcp.yml  publish-pypi.yml
rdl_mcp/: __init__.py  batch.py  columns.py  reader.py  server.py  styles.py  validation.py  xml_utils.py
tests/: __init__.py  test_rdl_mcp_server.py
