[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdl-mcp"
version = "0.1.0"
description = "Edit SSRS reports using AI - MCP server for RDL files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["fastmcp>=2.0"]
authors = [{ name = "Beth Maloney" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/bethmaloney/rdl-mcp"
Repository = "https://github.com/bethmaloney/rdl-mcp"
Issues = "https://github.com/bethmaloney/rdl-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
rdl-mcp = "rdl_mcp_server:main"
